--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,17 @@
     font-family: monospace;
   }
 }
-
+label {
+  font-size: 50px;
+  margin: 15px;
+  padding: 5px;
+}
 body {
-  background-color: teal;
+  background-color: grey;
+  font-size: 50px;
+  border: 3px solid white;
+}
+
+#images {
+  margin: 20px;
 }
