--- a/src/components/Memer.css
+++ b/src/components/Memer.css
@@ -1,3 +1,7 @@
+.memeForm {
+  display: block;
+}
+
 .meme {
   position: relative;
   text-align: center;
@@ -23,7 +27,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  font-size: 26px;
+  font-size: 46px;
 }
 
 .top {
