font picker is working

--- a/src/components/Memer.css
+++ b/src/components/Memer.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Allerta+Stencil|Archivo|Montserrat|Open+Sans|Paprika|Roboto');
+
+/* font-family: 'Roboto', sans-serif; */
+/* font-family: 'Allerta Stencil', sans-serif; */
+/* font-family: 'Archivo', sans-serif; */
+/* font-family: 'Open Sans', sans-serif; */
+/* font-family: 'Montserrat', sans-serif; */
+/* font-family: 'Paprika', cursive; */
+
+
 .memeForm {
   display: block;
 }
