--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,11 +14,20 @@ label {
   padding: 5px;
 }
 body {
-  background-color: grey;
+  background-color: rgb(208, 220, 239);
   font-size: 50px;
   border: 3px solid white;
 }
 
 #images {
   margin: 20px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+  text-align: center;
+  margin: 0;
 }
