--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,7 @@
-.font {
-
+img {
+      white-space: pre;
+      margin: auto;
+      display: inline-block;
+      padding: 1em;
+      font-family: monospace;
 }
