dom to image not working

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 img {
-      white-space: pre;
+      /* white-space: pre;
       margin: auto;
       display: inline-block;
       padding: 1em;
-      font-family: monospace;
+      font-family: monospace; */
 }
