--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,22 +1,34 @@
 .generator {
+  background: lightgray;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
   width: 100vw;
+  height: 100vw;
   margin: auto;
+  padding: 20px;
 }
 .formHolder {
-  width: 600px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  border: solid black 5px;
+  background-color: lightblue;
+  padding: 15px;
+  margin-bottom: 50px;
 }
+form {
+  width: 600px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-evenly;
+  margin: auto;
+}
+
 .meme {
   position: relative;
-  width: 600px;
-  height: 400px;
-  .topText {
+
+  .topText > p {
     z-index: 3;
     position: absolute;
     text-align: center;
@@ -28,7 +40,7 @@
     color: white;
     font-weight: bold;
   }
-  .bottomText {
+  .bottomText > p {
     text-align: center;
     height: 100px;
     width: 600px;
