--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,24 +1,37 @@
 .card {
-    border: 1px solid red;
     position: relative;
     text-align: center;
     color: white;
-    text-shadow: 1px 1px black;
-    font-size: 30px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    text-shadow: 2px 2px black;
+    font-size: 35px;
     width: auto;
-    height: 700px;
+    height: auto;
+    margin: 0;
 }
 
 .topText {
     color: white;
-    padding-top: 20px;
+    position: absolute;
+    top: 0;
+    margin: 0;
+    left: 50%;
+    transform: translate(-50%);
+}
 
+img {
+    width: 100%
 }
 
 .bottomText {
     color: white;
-    padding-top: 500px;
+    position: absolute;
+    bottom: 10px;
+    margin: 0;
+    left: 50%;
+    transform: translate(-50%);
+
+}
+
+button {
+    display: block;
 }
