--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,10 @@
 .meme {
-
-  p {
-    white-space: pre;
-    margin: auto;
-    display: inline-block;
-    padding: 1em;
-    font-family: monospace;
-  }
+    positioning: relative;
+    p {
+        z-index:10;
+    }
+    img {
+        z-index: 1;
+        position: absolute;
+    }
 }
