--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,8 @@
 .form {
+  width: 50%;
   display: flex;
   flex-direction: column;
-  margin: 2em;
+  margin: 0 auto;
 }
 
 .meme {
@@ -24,6 +25,7 @@
   justify-content: space-between;
   color: white;
   position: absolute;
+  font-size: 30pt;
 
   .top {
     top: 1em;
