--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 body {
-  background-color: rgb(208, 220, 239);
+  background-color: teal;
   font-size: 50px;
   border: 3px solid white;
 }
