--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,13 @@
+h1 {
+  font-family: impact, sans-serif;
+}
+
 .form {
   width: 50%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  font-family: impact, sans-serif;
 }
 
 .meme {
